Fix Illegal reflective access LongFastUUID